# aoc2512

./: .gitignore  README.md
day1/: Makefile  README.md  lib.c  lib.h  main.c
day10/: README.md  javascript-lp-solver.d.ts  lib.ts  main.ts  package-lock.json  package.json  tsconfig.json
day11/: README.md  lib.rb  main.rb
day12/: README.md  grid.py  lib.py  main.py
day2/: Makefile  README.md  lib.cpp  lib.hpp  main  main.cpp
day3/: README.md
day3/src/: lib.rs  main.rs
day4/: README.md  day4  lib.go  main.go
day5/: Lib.java  Main.java  README.md  Range.java
day6/: Lib.fs  README.md  day6.fsproj
day6/day6/: Lib.fs  Program.fs
day7/: Lib.hs  Main.hs  README.md  day7.cabal
day8/: .gitignore  README.md
day8/lib/: day8.ex  main.ex
day9/: Lib.scala  Main.scala  README.md  build.sbt
