cabal-version:      3.0
name:               day7
version:            0.1.0.0
license:            NONE

executable day7
    main-is:          Main.hs
    other-modules:    Lib
    build-depends:    base ^>=4.21, containers
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall
